fix(suggester): fix svg icon sometimes rendered too large

--- a/src/modules/suggester.less
+++ b/src/modules/suggester.less
@@ -7,8 +7,6 @@
   }
   img.isc-icon {
     display: inline;
-    height: var(--font-normal);
-    width: var(--font-normal);
   }
 }
 
